--- a/index.html
+++ b/index.html
@@ -133,6 +133,17 @@
         </div>
     </footer>
 
+    <!-- Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-854NM4QCH9"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'G-854NM4QCH9');
+    </script>
+
+    <!-- Token Data Update Script -->
     <script>
     async function updateTokenData() {
         try {
